[package]
name = "w5500"
version = "0.2.2"
authors = ["Michael Watzko <michael@watzko.de>"]
repository = "https://github.com/kellerkindt/w5500.git"
description = "W5500 IoT Controller implementation. Currently UDP sending and receiving is working. WIP"
keywords = ["embedded", "w5500", "iot", "arm", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std", "network-programming"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
byteorder = { version = "1.3", default-features = false }
embedded-hal = "0.2"
nb = "0.1"
